:sparkles:(PullToRefresh) modify from AlloyTeam/AlloyPullRefresh; fixes #1

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>Github Trending</title>
   <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_383558_rrn1crbtm2xirudi.css" />
   <!-- <link rel="stylesheet" href="http://apeatling.com/demos/web-ptr/lib/genericons/genericons.css"> -->
+  <style>
+    @keyframes rotates { 100% { transform: rotate(360deg); } }
+    @keyframes dash {
+      0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+      }
+      50% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -40px;
+      }
+      100% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -120px;
+      }
+    }
+  </style>
 </head>
 <body>
 
